test/sh/error/misc/.trivial_type.sk.ll
; ModuleID = './test/sh/error/misc/trivial_type.sk'
source_filename = "./test/sh/error/misc/trivial_type.sk"

define i64 @.trivial_type() {
entry:
  ret i64 0
}
